<resources>
    <string name="app_name">Dreams Reservation</string>
    <string name="name_company">Sueños</string>
    <string name="fr_title">Reservar Habitación</string>
    <string name="desc_info_button">Información sobre las políticas de reservas</string>
    <string name="im_guest">Yo soy el huésped</string>
    <string name="guest">HUESPED</string>
    <string name="dni">Dni</string>
    <string name="dates">FECHAS</string>
    <string name="phone">Celular</string>
    <string name="entry_date">Entrada (2024/05/28)</string>
    <string name="departure_date">Salida (2024/05/20)</string>
    <string name="x">X</string>
    <string name="reservar">RESERVAR</string>
    <string name="indicator_separator">Separa las rutas con \'-\'</string>
    <string name="large_text_example">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</string>
    <string name="floor">FLOOR</string>
    <string name="priceday">PRECIO/DIA</string>
    <string name="number">NUMBERO</string>
    <string name="content">CONTENIDO</string>
    <string name="disable">Deshabilitar</string>
    <string name="enable">Habilitar</string>
    <string name="matrimoniales">MATRIMONIALES</string>
    <string name="suites">SUITES</string>
    <string name="individuales">INDIVIDUALES</string>
    <string name="favorite">Tu hotel favorito</string>
    <string name="register_load">Al iniciar, serás registrado en nuestra base de datos</string>
    <string name="start">INICIAR</string>
    <string name="piso_4">Piso 4</string>
    <string name="price_example">S/. 320.00</string>
    <string name="example_price">300.50</string>
    <string name="see_info">Ver mas Información</string>
    <string name="description_login">"Sigue Soñando"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="who_guest">¿Quien es el huésped?</string>
    <string name="now">Hoy</string>
</resources>