<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

   <LinearLayout
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <TextView
           android:layout_marginTop="30dp"
           android:layout_marginBottom="30dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/who_guest"
           android:textColor="@color/golden"
           android:textSize="25sp"
           android:textStyle="bold" />

       <!--Guest Information-->
       <CheckBox
           android:id="@+id/check_im_guest"
           android:layout_width="wrap_content"
           android:layout_marginBottom="20dp"
           android:layout_height="wrap_content"
           android:text="@string/im_guest" />

       <EditText
           android:id="@+id/txt_dni"
           android:layout_width="match_parent"
           android:layout_height="60dp"
           android:layout_marginBottom="30dp"
           android:background="@drawable/bg_edt_form_reservation"
           android:hint="@string/dni"
           android:paddingStart="10dp"
           android:paddingEnd="10dp" />

       <EditText
           android:id="@+id/txt_phone_number"
           android:layout_width="match_parent"
           android:layout_marginBottom="40dp"
           android:layout_height="60dp"
           android:background="@drawable/bg_edt_form_reservation"
           android:hint="@string/phone"
           android:paddingStart="10dp"
           android:paddingEnd="10dp" />


       <!--Dates information-->

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="¿Para cuando?"
           android:layout_marginBottom="30dp"
           android:textColor="@color/golden"
           android:textSize="25sp"
           android:textStyle="bold" />



           <EditText
               android:id="@+id/txt_entry_date"
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:focusable="false"
               android:layout_marginBottom="30dp"
               android:background="@drawable/bg_edt_form_reservation"
               android:hint="@string/entry_date"
               android:paddingStart="10dp"
               android:paddingEnd="10dp" />



       <!--Guest Information-->

       <EditText
           android:id="@+id/txt_departure_date"
           android:layout_width="match_parent"
           android:layout_height="60dp"
           android:background="@drawable/bg_edt_form_reservation"
           android:hint="@string/departure_date"
           android:paddingStart="10dp"
           android:focusable="false"
           android:paddingEnd="10dp" />
   </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/btn_exit_form_reserva"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:textColor="@color/gray_30"
            android:background="@drawable/bg_radius_corner"
            android:backgroundTint="@color/gray_70"
            android:text="@string/x" />

        <Button
            android:id="@+id/btn_confirmar_reserva"
            android:layout_width="0dp"
            android:layout_marginStart="20dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/bg_radius_corner"
            android:backgroundTint="@color/golden"
            android:text="@string/reservar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>