<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <!--header-->
    <LinearLayout
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/fr_title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/gray_100"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="30dp"
            android:background="@color/transparent"
            android:contentDescription="@string/desc_info_button"
            android:scaleType="centerCrop"
            android:src="@drawable/information_button" />
    </LinearLayout>

    <!--Form-->

    <CheckBox
        android:id="@+id/check_im_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/im_guest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        android:textColor="@color/gray_100"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_im_guest">
        <!---Guest information-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/gray_10"
            app:cardCornerRadius="25dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/guest"
                    android:textColor="@color/gray_100"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_dni"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_edittext_bg"
                    android:backgroundTint="@color/white"
                    android:hint="@string/dni"
                    android:textColorHint="@color/gray_30"
                    android:inputType="number"
                    android:maxLength="8"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/gray_70" />


                <EditText
                    android:id="@+id/txt_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="30dp"
                    android:textColorHint="@color/gray_30"
                    android:layout_marginBottom="20dp"
                    android:autofillHints="phone"
                    android:background="@drawable/rounded_edittext_bg"
                    android:backgroundTint="@color/white"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLength="9"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/gray_70" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--Reservation date-->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:cardBackgroundColor="@color/gray_10"
            app:cardCornerRadius="25dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/dates"
                    android:textColor="@color/gray_100"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_entry_date"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColorHint="@color/gray_30"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_edittext_bg"
                    android:backgroundTint="@color/white"
                    android:hint="@string/entry_date"
                    android:inputType="date"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/gray_70" />


                <EditText
                    android:id="@+id/txt_departure_date"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints="phone"
                    android:background="@drawable/rounded_edittext_bg"
                    android:backgroundTint="@color/white"
                    android:hint="@string/departure_date"
                    android:textColorHint="@color/gray_30"
                    android:inputType="date"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/gray_70" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <!--Buttons-->

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:text="@string/x"
            android:textSize="20sp"
            android:backgroundTint="@color/gray_70"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/reservar"
            android:layout_weight="1"
            android:backgroundTint="@color/golden"
            android:textColor="@color/gray_100"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>