<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_header_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_login"
        app:layout_constraintBottom_toTopOf="@id/card_form_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000" />
        <!-- Título -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_company"
            android:textColor="@color/golden"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Subtítulo -->
        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/favorite"
            android:textAlignment="center"
            android:textColor="@color/gray_30"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Contenedor de campos de texto -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="40dp">

            <!-- Campo Número celular -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/phone"
                android:textColor="@color/golden"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtcelular"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_edittext_bg"
                android:hint="@string/phone"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_30"
                android:textSize="18sp" />


            <!-- Campo DNI -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/dni"
                android:textColor="@color/golden"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtDni"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/rounded_edittext_bg"
                android:backgroundTint="@color/white"
                android:hint="@string/dni"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_30"
                android:textSize="18sp" />

            <!-- Botón Iniciar -->
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/golden"
                android:text="@string/start"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.979" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
