<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:layout_marginBottom="18dp"
    app:cardCornerRadius="20dp"
    android:layout_marginEnd="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#404040"
        android:orientation="horizontal"

        >

        <ImageView
            android:id="@+id/imgHabitacion"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/habitaciones"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="8dp">

            <TextView
                android:id="@+id/textDescripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:maxLines="9"
                android:text="@string/large_text_example"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/textPiso"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/piso_4"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"


                    />

                <TextView

                    android:id="@+id/textPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/price_example"
                    android:textColor="@color/golden"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>


